[package]
name = "twitter"
version = "1.5.0"
edition = "2024"

[dependencies]
log = "0.4.29"
reqwest = { version = "0.13.1", default-features = false, features = ['json', 'multipart', 'stream', 'query'] }
serde =  { version = "1.0.228", features = ['derive']}
serde_json = "1.0.149"
oauth = { version = "0.6", package = "oauth1-request" }
dirs = "6.0.0"
toml = "0.9.11"
clap = { version = "4.5.56", features = ["derive"] }
infer = "0.19.0"
futures-util = "0.3.31"
indicatif = "0.18.3"
tokio = { version = "1.49.0", features = ['macros', 'rt-multi-thread', 'io-util'] } 
sha2 = "0.10.9"
hex = "0.4.3"
tar = "0.4.44"
flate2 = "1.1.8"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "split_tweet"
harness = false

[profile.release]
opt-level = "z" 
lto = true  
codegen-units = 1
panic = "abort"
strip = true 
