[package]
name = "twitter"
version = "1.7.1"
edition = "2024"

[dependencies]
log = "0.4.29"
curl-rest = "0.5.1"
curl = "0.4.49"
serde =  { version = "1.0.228", features = ['derive']}
serde_json = "1.0.149"
oauth = { version = "0.6", package = "oauth1-request" }
dirs = "6.0.0"
toml = "1.0.3"
clap = { version = "4.5.60", features = ["derive"] }
infer = "0.19.0"
indicatif = "0.18.4"
sha2 = "0.10.9"
hex = "0.4.3"
tar = "0.4.44"
flate2 = "1.1.9"
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
parse_datetime = "0.14.0"
jiff = "0.2.21"
rusqlite = "0.38.0"
tabled = "0.20.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serial_test = "3.4.0"

[[bench]]
name = "split_tweet"
harness = false

[profile.release]
opt-level = "z" 
lto = true  
codegen-units = 1
panic = "abort"
strip = true 
